css: Fix vertical alignment of mention typeahead.
Somehow the previous styling was oddly off-center.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2026,7 +2026,7 @@ div.focused_table {
     height: 21px;
     width: 21px;
     position: relative;
-    margin-top: -7px;
+    margin-top: -4px;
     vertical-align: middle;
     top: 2px;
     right: 8px;
